@@ -1,20 +1,15 @@
 ThisBuild / version := "0.1.0-SNAPSHOT"
-
 ThisBuild / scalaVersion := "2.12.18"
 
 lazy val root = (project in file("."))
   .settings(
     name := "AnalysePollution",
-
-    // Dépendances Apache Spark - VERSION 3.5.1 (compatible Java 17)
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-core" % "3.5.1",
-      "org.apache.spark" %% "spark-sql" % "3.5.1"
+      "org.apache.spark" %% "spark-core" % "3.3.2",
+      "org.apache.spark" %% "spark-sql" % "3.3.2"
     ),
-
-    // Options Java pour résoudre les problèmes d'accès avec Java 17
-    javaOptions ++= Seq(
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+    scalacOptions ++= Seq(
+      "-deprecation",
+      "-feature"
     )
   )
-
